--- a/DiscoveryService/src/main/resources/application.properties
+++ b/DiscoveryService/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+#Puerto por defecto del Eureka server
 server.port = 8761
 
+#Evita que no se registre a si mismo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
