--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name = config-server
+
 server.port=8888
+
+#Repositorio donde se encuentran los properties de cada microservicio
 spring.cloud.config.server.git.uri=https://github.com/Marc0Franc0/SpringMicroservices-ServiceConfiguration
+
 spring.cloud.config.server.clone-on-start=true
