Message broker para los microservicios y uso de herramienta para guardar datos sensibles
-Utilización de Spring Cloud Bus para la utilización de RabbitMQ como Message Broker
-Para guardar datos sensibles se utilizo Vault en cada microservicio

--- a/ProductMicroservice/src/main/resources/bootstrap.properties
+++ b/ProductMicroservice/src/main/resources/bootstrap.properties
@@ -11,3 +11,18 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 #Config Actuator
 management.endpoints.web.exposure.include=*
+
+
+#Config Vault
+spring.cloud.vault.application-name=product-microservice
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=root
+
+#Config RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
