--- a/BookingMicroservice/src/main/resources/bootstrap.properties
+++ b/BookingMicroservice/src/main/resources/bootstrap.properties
@@ -3,10 +3,6 @@ spring.cloud.config.uri=http://localhost:8888
 #Conguración la cual se carga
 spring.cloud.config.profile=dev
 
-#Database Mysql configuration
-spring.datasource.username=root
-spring.datasource.password=
-
 #Eureka client configuration
 spring.application.name=booking-microservice
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
@@ -15,3 +11,17 @@ server.port = 0
 
 #Config Actuator
 management.endpoints.web.exposure.include=*
+
+#Config Vault
+spring.cloud.vault.application-name=booking-microservice
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=root
+
+#Config RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
