--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**,/api/categori
 spring.cloud.gateway.routes[1].id=booking-microservice
 spring.cloud.gateway.routes[1].uri=lb://BOOKING-MICROSERVICE
 spring.cloud.gateway.routes[1].predicates[1]=Path=/api/booking/**
+
+#Config KeyCloak
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:9090/realms/mycompany-microservices-realm
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-id=spring-cloud-gateway-client
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-secret=VxSNFUOskX3J9AJHn8skgbRaBDrhTxNW
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.provider=keycloak
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.redirect-uri=http://localhost:8080/login/oauth2/code/spring-cloud-gateway-client
