--- a/ProductMicroservice/src/main/resources/bootstrap.yml
+++ b/ProductMicroservice/src/main/resources/bootstrap.yml
@@ -13,7 +13,6 @@ management:
     web:
       exposure:
         include: '*'
-
 eureka:
   instance:
     instanceId: ${spring.application.name}:${random.uuid}
@@ -25,3 +24,13 @@ eureka:
     healthcheck:
       enabled: true
 
+openapi:
+  service:
+    title: product-microservice doc #title
+    version: 1.0.0
+    url: http://localhost:8080 #api gateway url
+springDoc:
+  api-docs:
+    path: /product-microservice/v3/api-docs
+  swagger-ui:
+    path: /product-microservice/swagger-ui.html
