--- a/StockMicroservice/pom.xml
+++ b/StockMicroservice/pom.xml
@@ -65,6 +65,15 @@
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
