--- a/ProductMicroservice/pom.xml
+++ b/ProductMicroservice/pom.xml
@@ -10,7 +10,6 @@
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>ProductMicroservice</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Product Microservice</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -59,6 +58,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 			<version>4.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
