--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.8'
 services:
   discovery-service:
     container_name: discovery-service-container
-    build: DiscoveryService/.
+    #build: DiscoveryService/.
+    image: marc0franc0/product-reserver_discovery-service:1.0.0
     ports:
       - "8761:8761"
     restart: always
@@ -10,7 +11,8 @@ services:
       eureka.instance.hostname: discovery-service
   config-server:
     container_name: config-server-container
-    build: ConfigServer/.
+    #build: ConfigServer/.
+    image: marc0franc0/product-reserver_config-server:1.0.0
     ports:
       - "8888:8888"
     restart: always
@@ -18,7 +20,8 @@ services:
     container_name: api-gateway-container
     ports:
       - "8080:8080"
-    build: ApiGateway/.
+    #build: ApiGateway/.
+    image: marc0franc0/product-reserver_api-gateway:1.0.0
     links:
       - discovery-service
     environment:
@@ -26,7 +29,8 @@ services:
     restart: always
   product-microservice:
     container_name: product-microservice-container
-    build: ProductMicroservice/.
+    #build: ProductMicroservice/.
+    image: marc0franc0/product-reserver_product-microservice:1.0.0
     restart: always
     links:
       - config-server
@@ -34,7 +38,8 @@ services:
       - mongo
       - discovery-service
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/productdb
+      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/product_db
+      SPRING_DATA_MONGODB_DATABASE: product_db
       SPRING_CLOUD_CONFIG_PROFILE: prod
       SPRING_CLOUD_CONFIG_URI: http://config-server:8888
       SPRING_RABBITMQ_HOST: rabbitmq
@@ -44,7 +49,8 @@ services:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
   stock-microservice:
     container_name: stock-microservice-container
-    build: StockMicroservice/.
+    #build: StockMicroservice/.
+    image: marc0franc0/product-reserver_stock-microservice:1.0.0
     restart: always
     links:
       - config-server
@@ -64,7 +70,8 @@ services:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
   booking-microservice:
     container_name: booking-microservice-container
-    build: BookingMicroservice/.
+    #build: BookingMicroservice/.
+    image: marc0franc0/product-reserver_booking-microservice:1.0.0
     restart: always
     links:
       - config-server
